--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@ionic-native/core": "^3.12.1",
         "@ionic-native/device-motion": "^4.2.1",
         "@ionic-native/device-orientation": "^4.2.1",
+        "@ionic-native/file": "^4.3.2",
         "@ionic-native/geolocation": "^4.2.1",
         "@ionic-native/gyroscope": "^4.3.0",
         "@ionic-native/splash-screen": "3.12.1",
@@ -37,6 +38,7 @@
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-device-motion": "^1.2.5",
         "cordova-plugin-device-orientation": "^1.0.7",
+        "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-gyroscope": "^0.1.4",
         "cordova-plugin-splashscreen": "^4.0.3",
@@ -70,7 +72,8 @@
             "cordova-plugin-device-orientation": {},
             "cordova-sqlite-storage": {},
             "cordova-plugin-gyroscope": {},
-            "uk.co.workingedge.cordova.plugin.sqliteporter": {}
+            "uk.co.workingedge.cordova.plugin.sqliteporter": {},
+            "cordova-plugin-file": {}
         },
         "platforms": [
             "android"
