--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/background-mode": "^4.5.2",
         "@ionic-native/core": "^3.12.1",
         "@ionic-native/device-motion": "^4.2.1",
         "@ionic-native/device-orientation": "^4.2.1",
@@ -33,6 +34,7 @@
         "@ionic/storage": "2.0.1",
         "chart.js": "^2.7.0",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-background-mode": "^0.7.2",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
@@ -73,7 +75,8 @@
             "cordova-sqlite-storage": {},
             "cordova-plugin-gyroscope": {},
             "uk.co.workingedge.cordova.plugin.sqliteporter": {},
-            "cordova-plugin-file": {}
+            "cordova-plugin-file": {},
+            "cordova-plugin-background-mode": {}
         },
         "platforms": [
             "android"
