--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/background-mode": "^4.5.2",
+        "@ionic-native/clipboard": "^4.7.0",
         "@ionic-native/core": "^3.12.1",
         "@ionic-native/device-motion": "^4.2.1",
         "@ionic-native/device-orientation": "^4.2.1",
@@ -33,26 +34,27 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "chart.js": "^2.7.0",
-        "cordova-android": "^6.2.3",
+        "cordova-android": "6.4.0",
+        "cordova-clipboard": "^1.1.1",
         "cordova-plugin-background-mode": "^0.7.2",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "^1.0.5",
-        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-compat": "^1.2.0",
+        "cordova-plugin-console": "^1.1.0",
+        "cordova-plugin-device": "^1.1.7",
         "cordova-plugin-device-motion": "^1.2.5",
         "cordova-plugin-device-orientation": "^1.0.7",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-gyroscope": "^0.1.4",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-sqlite-storage": "^2.0.4",
+        "cordova-plugin-splashscreen": "^4.1.0",
+        "cordova-plugin-statusbar": "^2.4.1",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-sqlite-storage": "^2.3.0",
         "ionic-angular": "3.6.0",
         "ionic-native": "^2.9.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
-        "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.1",
+        "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
         "zone.js": "0.8.12"
     },
     "devDependencies": {
@@ -74,7 +76,8 @@
             "cordova-sqlite-storage": {},
             "cordova-plugin-gyroscope": {},
             "uk.co.workingedge.cordova.plugin.sqliteporter": {},
-            "cordova-plugin-background-mode": {}
+            "cordova-plugin-background-mode": {},
+            "cordova-clipboard": {}
         },
         "platforms": [
             "android"
