--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "cordova-plugin-device": "^1.1.7",
         "cordova-plugin-device-motion": "^1.2.5",
         "cordova-plugin-device-orientation": "^1.0.7",
+        "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-gyroscope": "^0.1.4",
         "cordova-plugin-splashscreen": "^4.1.0",
@@ -77,7 +78,8 @@
             "cordova-plugin-gyroscope": {},
             "uk.co.workingedge.cordova.plugin.sqliteporter": {},
             "cordova-plugin-background-mode": {},
-            "cordova-clipboard": {}
+            "cordova-clipboard": {},
+            "cordova-plugin-file": {}
         },
         "platforms": [
             "android"
